Fix .button:hover on mobile

--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -18,7 +18,6 @@
   transition-duration: 200ms;
   transition-timing-function: ease-in-out;
 
-  &:hover,
   &:focus-visible {
     background-color: var(--color-hover);
   }
@@ -27,5 +26,11 @@
     transition-property: background-color;
     transition-duration: 0s;
     background-color: var(--color-active);
+  }
+
+  @media (hover: hover) {
+    &:hover {
+      background-color: var(--color-hover);
+    }
   }
 }
